# Customer-support-agent

./: README.md  env_exmaple.txt  frontend.py  main.py  pyproject.toml  requirements.txt  start_mcp_servers.py
agent/: graph.py
clients/: atlas_client.py  common_client.py  mcp_client.py
config/: agent_config.json  amit_input.json  critical_auth.json  incomplete_delivery.json  industry_config.json  industry_loader.py  input_detailed.json  knowledge_base.json  payment_dispute.json  payment_input.json  rohit_input.json  workflow_config.json
mcp_servers/: __init__.py  atlas_tools.py  common_tools.py
schemas/: agent_state.py
